--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("../images/clock-sam.png");
+    background: url("../img/clock-sam.png");
     background-size: cover;
     border: 4px solid #091921;
     border-radius: 50%;
@@ -62,7 +62,6 @@ body{
 .hr, .mn, .sc{
     display: flex;
     justify-content: center;
-    /* align-items: center; */
     position: absolute;
     border-radius: 50%;
 }
